# bitterroot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  turbo.json
bitterroot/: manage.py  package.json
bitterroot/articles/migrations/: 0001_initial.py  0003_article_title.py
bitterroot/call_numbers/: admin.py  models.py  serializers.py  urls.py  views.py
bitterroot/call_numbers/migrations/: 0001_initial.py
bitterroot/root/: settings.py  urls.py
bitterroot/utils/: filters.py
core/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
core/src/lib/auth/: allauth.ts  django.ts  index.ts  routes.svelte.ts  state.svelte.ts  types.ts
core/src/lib/auth/components/: Form.svelte  Provider.svelte  ProviderList.svelte  types.ts
core/src/lib/call-numbers/: api.ts  index.ts
core/src/lib/call-numbers/components/: CallNumberDataTable.svelte  CallNumberFilterModal.svelte  SelectionBox.svelte
core/src/lib/ui/: index.ts
docs/: schema.dbml
src/bitterroot/articles/: admin.py  apps.py  models.py
src/bitterroot/articles/migrations/: 0002_alter_authorpublisherinfo_options_and_more.py  0004_remove_topic_aspect_remove_callnumber_aspect_and_more.py
src/bitterroot/call_numbers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/bitterroot/call_numbers/migrations/: 0001_initial.py  0002_rename_authorpublisherinfo_authorpublisher.py  0003_remove_aspect_root_aspect_root.py
src/bitterroot/root/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/frontend/: Makefile  package-lock.json  package.json  tsconfig.json
src/frontend/src/: app.css  app.d.ts
src/frontend/src/lib/: types.ts  utils.ts
src/frontend/src/lib/apis/: call-numbers.ts
src/frontend/src/lib/auth/: allauth.ts  routes.svelte.ts  state.svelte.ts  types.ts
src/frontend/src/lib/auth/components/: Form.svelte  Provider.svelte  ProviderList.svelte  types.ts
src/frontend/src/lib/call_numbers/: CallNumberDataTable.svelte  CallNumberFilterModal.svelte  SelectionBox.svelte  lib.ts  models.ts
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/account/: +layout.svelte  README.md
src/frontend/src/routes/accounts/: +layout.svelte
src/frontend/src/routes/components-sampler/: +page.svelte
web/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.css
web/src/lib/apis/: cn.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/(app)/: +layout.svelte
web/src/routes/account/: +layout.svelte
web/src/routes/account/login/: +page.svelte
web/src/routes/account/signup/: +page.svelte
web/src/routes/components-sampler/: +page.svelte
web/static/: robots.txt
(+9 files in other folders)
