[project]
name = "bitterroot"
version = "0.1.0"
description = "A hostable, searchable, database to categorize and analyze the scholarships of different universities and identify different niches of academic literature."
authors = [
    { name = "Noah S. Roberts", email = "35052448+Mase3206@users.noreply.github.com" },
    { name = "Johnny Norton", email = "unknown@example.com" },
]
readme = "README.md"
requires-python = ">3.13,<3.14"

dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    # "markdown (>=3.9,<4.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    # "django-crispy-forms (>=2.4,<3.0)",
    "django-extensions (>=4.1,<5.0)",
    "environs (>=14.5.0,<15.0.0)",
    # "django-betterforms (>=2.0.0,<3.0.0)",
    # "setuptools (>=80.9.0,<81.0.0)",  # Keep <81 for betterforms, as it requires pkg_resources, which will be removed soon.
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]

[tool.poetry.scripts]
manage = "bitterroot.manage:main"


# Ruff settings

[tool.ruff]
extend-exclude = ["sample/*"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "W291", "F401", "I"
]
[tool.ruff.lint.isort]
combine-as-imports = true
